[package]
name = "discord-analytics"
version = "0.1.0"
authors = ["Gabriel Thomé <gabrielallan.thome@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.2"
tokio = "1.2.0"
mongodb = "2.0.0-alpha"
dotenv = "0.15.0"